--- a/css/style.css
+++ b/css/style.css
@@ -25,31 +25,31 @@ p {
     text-align: center;
 }
 
-#main img {
+.main img {
 
     margin: auto;
     width: 80%;
 }
 
-#main h3 {
+.main h3 {
     font-size: 2rem;
     font-weight: 700;
 
 }
 
-#main h4 {
+.main h4 {
     font-size: 1.5rem;
     font-weight: 700;
 
 }
 
-#main {
+.main {
     position: relative;
     padding: 7% 15%;
 
 }
 
-#main:before {
+/* .main:before {
 
     content: "";
     background-image: url(../images/white-marble.jpg);
@@ -61,7 +61,7 @@ p {
     left: 0;
     right: 0;
     z-index: -1;
-}
+} */
 
 #mission,
 #maps {
@@ -308,3 +308,17 @@ a:hover {
     padding-top: 5%;
 }
 
+.svg {
+    background: radial-gradient(ellipse at center, #ff9100 0%, black 100%);
+    overflow: hidden;
+  }
+
+  #bg {
+      position: absolute;
+      display: block;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
+    
+  }
